# c_plusplus_prog

./: ccctest  ctest  ctest.cpp  game  game.cpp  main  main.cpp  oop  oop.cpp  struct  struct.cpp  task4.txt  test  test.c  test.cpp  thread  thread.cpp  xtest
OLS/: 2  2.cpp  3.cpp  a.out
Prata/: chapter1  chapter1.cpp  chapter2  chapter2.cpp  chapter3  chapter3.cpp  chapter4  chapter4.cpp
SDLTest/: SDLTest.cbp
SFML/: main.cpp  sfml-app  window  window.cpp
STZ/lab1/: 1_c.cpp  answers.txt  test.txt  отчет.txt
STZ/lab2/: answers.txt  lab_2.cpp  отчет.txt
STZ/lab3/: answers.txt  lab3.cpp  lab3.h  main  main.cpp  отчет.txt
STZ/lab4/: .main.cpp.swp  Keyboard.cpp  Keyboard.h  Peripheral.cpp  Peripheral.h  Scanner.cpp  Scanner.h  answers.txt  main  (+1 more)
STZ/simplehttpserver/: CMakeLists.txt
STZ/simplehttpserver/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  simplehttpserver
UE4/: main  main.cpp
codewars/: 7kye  7kye.cpp
game_dir/: .Mammal.cpp.swp  .Mammal.h.swp  Cat.h  Dog.h  Human.h  Mammal.cpp  Mammal.h  game_test  game_test.cpp
hometask2/: learn  learn.cpp  main_reader  main_reader.cpp  main_writer  main_writer.cpp  reader  reader.cpp  writer  writer.cpp
hometask_1/: .num.csv.swp  MNP.h  bbbb  bbbb.cpp  main  main.cpp  num.csv  number.txt  test  test.cpp
portfolio/: test  test.cpp
ravesli/: 1_1.cpp
univer/: IDZ_1_questions.txt  anothertest  anothertest.cpp  function.txt  idz_2_3  idz_2_3.cpp  idz_2_4  idz_2_4.cpp  idz_2_4_exaple  idz_2_4_exaple.cpp  list_1.с  list_2.с  test  test.c  test.cpp  ukazateli  ukazateli.c  ukazateli_function.c
(+94 files in other folders)
